--- a/calendar_edit.html
+++ b/calendar_edit.html
@@ -48,7 +48,7 @@
 		      <div id="from-date" class="date input"></div>
 		      <div id="from-time" class="time input"></div>
 		    </div>
-		    <div id="between">|</div>
+		    <div id="between">～</div>
 		    <div id="to-datetime" class="datetime">
 		      <div id="to-date" class="date input"></div>
 		      <div id="to-time" class="time input"></div>
